--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
     <style>
       * {
         font-family: "Montserrat";
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
       }
     </style>
     <title>Chatbeeper</title>
