--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.cdnfonts.com/css/quicksand" rel="stylesheet">
+                
     <link href="https://fonts.cdnfonts.com/css/mentimun" rel="stylesheet" />
 
     <style>
